# robotframework-aos-cx

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  site.yaml.example  verify.py
docs/: mcp-tool-catalogue.md
libraries/: CXLibraryAAAPortAccess.py  CXLibraryBase.py  CXLibraryDNS.py  CXLibraryEnvironment.py  CXLibraryHardening.py  CXLibraryInterfaces.py  CXLibraryLACP.py  CXLibraryLogging.py  CXLibraryManagement.py  CXLibraryMulticast.py  CXLibraryNTP.py  CXLibraryOSPF.py  CXLibrarySoftware.py  CXLibrarySpanningTree.py  CXLibraryVSF.py  CXLibraryVSX.py  _aoscx.py
tests/: aaa_port_access.robot  dns.robot  environment.robot  hardening.robot  interfaces.robot  lacp.robot  logging.robot  management.robot  multicast.robot  ntp.robot  ospf.robot  software.robot  spanning_tree.robot  vsf.robot  vsx.robot
